tests/baselines/reference/innerModExport1.errors.txt
tests/cases/compiler/innerModExport1.ts(5,5): error TS2580: Cannot find name 'module'. Do you need to install type definitions for node? Try `npm i @types/node`.
tests/cases/compiler/innerModExport1.ts(5,12): error TS1005: ';' expected.


==== tests/cases/compiler/innerModExport1.ts (2 errors) ====
    module Outer {
    
        // inner mod 1
        var non_export_var: number;
        module {
        ~~~~~~
!!! error TS2580: Cannot find name 'module'. Do you need to install type definitions for node? Try `npm i @types/node`.
               ~
!!! error TS1005: ';' expected.
            var non_export_var = 0;
            export var export_var = 1;
    
            function NonExportFunc() { return 0; }
    
            export function ExportFunc() { return 0; }
        }
    
        export var outer_var_export = 0;
        export function outerFuncExport() { return 0; }
    
    }
    
    Outer.ExportFunc();